networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: customer2222
spec:
  selector:
    app: api # Adjust this label to match your API pod labels
  ports:
    - protocol: TCP
      port: 80 # The port your API service listens on
      targetPort: 8080 # The target port on your API pods
